--- a/index.html
+++ b/index.html
@@ -2,13 +2,57 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AlgoViz MK | Algorithm Visualization Portal</title>
+  <meta charset="utf-8" />
+  <link rel="icon" href="/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#a100ff" />
+
+  <!-- Primary Meta Tags -->
+  <title>AlgoViz | Advanced Algorithm Visualization Lab 2026</title>
+  <meta name="title" content="AlgoViz | Advanced Algorithm Visualization Lab 2026">
+  <meta name="description"
+    content="Visualize complex algorithms with surgical precision. A comprehensive laboratory for Python engineering, sorting, searching, and graph theory. Built with React 19 and Tailwind v4.">
+  <meta name="keywords"
+    content="algorithm visualization, python examples, sorting viz, react 19, tailwind v4, computer science, kazi musharraf">
+  <meta name="author" content="Kazi Musharraf">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://mk-knight23.github.io/25-python-mixed-examples/">
+  <meta property="og:title" content="AlgoViz | Advanced Algorithm Visualization Lab 2026">
+  <meta property="og:description"
+    content="From O(n²) to O(1). Visualize the beauty of computational complexity in a professional engineering environment.">
+  <meta property="og:image" content="https://mk-knight23.github.io/25-python-mixed-examples/algoviz-ss.png">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://mk-knight23.github.io/25-python-mixed-examples/">
+  <meta name="twitter:title" content="AlgoViz | Advanced Algorithm Visualization Lab 2026">
+  <meta name="twitter:description"
+    content="From O(n²) to O(1). Visualize the beauty of computational complexity in a professional engineering environment.">
+  <meta name="twitter:image" content="https://mk-knight23.github.io/25-python-mixed-examples/algoviz-ss.png">
+
+  <link rel="apple-touch-icon" href="/logo192.png" />
+  <link rel="manifest" href="/manifest.json" />
+
+  <!-- JSON-LD -->
+  <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "SoftwareApplication",
+        "name": "AlgoViz",
+        "operatingSystem": "Web",
+        "applicationCategory": "EducationalApplication",
+        "url": "https://mk-knight23.github.io/25-python-mixed-examples/"
+    }
+    </script>
 </head>
 
-<body>
+<body class="bg-slate-950 text-white select-none antialiased font-sans">
+  <a href="#root"
+    class="sr-only focus:not-sr-only focus:fixed focus:top-4 focus:left-4 focus:z-[200] focus:px-4 focus:py-2 focus:bg-accent focus:text-white focus:rounded-lg">Skip
+    to main</a>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
